<resources>
    <string name="app_name">TrainMaster</string>
    <!--main activity-->
    <string name="your_plan">your plan</string>
    <string name="change_user">change user</string>
    <string name="add_exercise">add exercise</string>
    <string name="back">back</string>
    <string name="too_easy">too easy!</string>
    <string name="too_hard">too hard! </string>
    <!--menu activity-->
    <string name="open_nav">open nav</string>
    <string name="close_nav">close nav</string>


    <!--recycle view-->
    <string name="exercise_name">exercise  name: </string>
    <string name="name">name</string>
    <string name="_0">0</string>
    <string name="sets">sets:</string>
    <string name="reps">reps:</string>
    <string name="weight">weight: </string>


    <!--timer-->
    <string name="exercise_timer">exercise timer</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">start</string>
    <string name="finish">finish</string>

    <!--start page -->
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>

    <!--register and sign in-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="Name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Email">Email</string>
    <string name="enter_your_email">name@gmail.com</string>
    <string name="Password">Password</string>
    <string name="your_password">Your Password: </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="height">Height</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="Weight">Weight</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="role">Role</string>
    <string name="Register">Register</string>


    <!--quiz activity-->

    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="trainee">trainee</string>

    <!--coach activity-->
    <string name="coach">coach</string>
    <string name="show_plan">show plan</string>
    <string name="select_user">Select User</string>
    <string name="background_image_desc" />
    <string name="fit_life_is_better">Fit life is better</string>
    <string name="fit">FIT</string>
    <string name="life">LIFE</string>
    <string name="happier">HAPPIER </string>
    <string name="no">NO</string>
    <string name="pain">PAIN</string>
    <string name="gain">GAIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="user_name">User Name:</string>
    <string name="the_name">the name</string>
    <string name="your_name">Your Name: </string>
    <string name="your_email">Your Email:</string>
    <string name="yourmail_gmail_com">yourmail@gmail.com</string>
    <string name="user_password">user password</string>
    <string name="_1">1</string>
    <string name="training_history">Number of Training:</string>
    <string name="training_list">My Training times:</string>
    <string name="dates">dates</string>
    <string name="loading_achievements">Loading achievements...</string>
    <string name="member_since">Member since:</string>
    <string name="membership_date">Membership date</string>
    <string name="highest_score">Highest score:</string>
    <string name="highest_score_lable">Highest score</string>


</resources>