<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="models.RegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textColor="@color/gray200"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_email"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textColor="@color/gray200"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/line2"
        android:layout_marginTop="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_password"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:textColor="@color/gray200"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Confirm Password -->
    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@id/line3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="50dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_confirm_password"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:textColor="@color/gray200"
            android:textSize="20sp" />

    </LinearLayout>
    <!-- Height -->
    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/line4"
        android:layout_marginTop="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_height"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_height"
            android:inputType="numberDecimal"
            android:textColor="@color/gray200"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Weight -->
    <LinearLayout
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/line5"
        android:layout_marginTop="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_weight"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Weight"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_weight"
            android:inputType="numberDecimal"
            android:textColor="@color/gray200"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/line6"
        android:layout_marginTop="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_role"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/trainee_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainee"
                android:checked="true" />

            <RadioButton
                android:id="@+id/coach_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coach" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/Register" />

    </LinearLayout>




</RelativeLayout>
