<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/exerciseData"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/exercise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/the_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repetitions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repetitions_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weight_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView

        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:layout_below="@+id/exerciseData"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10sp"

        />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/start_button"
        android:layout_below="@+id/timer"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="-2dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher_background" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="10dp"
        app:backgroundTint="@color/green_500"
        android:textAlignment="center"
        android:text="@string/start"
        android:textSize="20sp"
        android:textColor="@color/white"

        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/finish_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="130dp"
        app:backgroundTint="@color/red_200"
        android:textAlignment="center"
        android:text="@string/finish"
        android:textColor="@color/white"

        android:textSize="20sp"

         />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="10dp"
        app:backgroundTint="@color/blue_500"
        android:textAlignment="center"
        android:text="@string/back"
        android:textColor="@color/white"

        android:textSize="20sp"

        />

</RelativeLayout>

