<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/your_plan"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercises_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="fill_vertical"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/change_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"

            android:backgroundTint="@color/black"
            android:text="@string/change_user"
            style="@style/Widget.MaterialComponents.Button"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_exercise_button"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/add_exercise"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            android:textStyle="bold" />
    </LinearLayout>


</FrameLayout>